cabal-version: 3.0
name: ole
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: OLE
  build-depends:
    base ^>=4.17.2.0,
    binary,
    bytestring,

  hs-source-dirs: src
  default-language: Haskell2010

executable ole
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.17.2.0,
    binary,
    bytestring,
    ole,
    pretty-hex,

  hs-source-dirs: app
  default-language: Haskell2010
